Fix some layout issues on project page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -381,6 +381,10 @@ hr {
   outline: 0;
 }
 
+.clearfix {
+  clear: both;
+}
+
 #footer {
   height: 30px;
 }
